rework section apartments, contacts, footer

--- a/app/layout/section-apartments.html
+++ b/app/layout/section-apartments.html
@@ -1,61 +1,80 @@
 
 <div class="container">
   <div class="grid">
-    <div class="head-wrap">
+    <div class="apartments-head"> 
       <h3 class="headline">Только лучшее для амбициозных и успешных</h3>
       <h2 class="title">Квартиры в новостройках</h2>
-    </div><a class="link sm-button sm-button--main" href="#">
-      <div class="svg-wrap">
-        <svg>
+    </div><a class="arrow-btn arrow-btn--left arrow-btn--dark" href="#">
+      <div class="arrow-btn__icon">
+        <svg class="icon">
           <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
         </svg>
       </div>
-      <p>Посмотреть все статьи</p></a>
-    <div class="apartments-slider">
-      <div class="slide">
-        <div class="slide__name">ЖК "Остров"</div>
-        <div class="slide__img"><img src="images/object_img1.jpg"/></div>
-        <div class="slide__icon">
-          <svg>
-            <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
-          </svg>
-        </div>
-        <div class="slide__title">Выразительная архитектура</div>
-        <div class="slide__link link">Смотреть квартиры объекта</div>
+      <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a>
+  </div>
+</div>
+<!--SLIDER BUTTON START-->
+<svg class="apartments-slider__prevbtn">
+  <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
+</svg>
+<svg class="apartments-slider__nextbtn">
+  <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
+</svg>
+<!--SLIDER BUTTON END -->
+<!--SLIDER-->
+<div class="apartments-slider__wrap">
+  <div class="apartments-slider">
+    <!--SLIDER TILE-->
+    <div class="apartments-tile">
+      <div class="apartments-tile__name">ЖК "Остров"</div>
+      <div class="apartments-tile__img">
+        <!--TILE IMG--><img src="images/apartaments/apartaments1.jpg"/>
       </div>
-      <div class="slide">
-        <div class="slide__name">ЖК "Мирного"</div>
-        <div class="slide__img"><img src="images/object_img1.jpg"/></div>
-        <div class="slide__icon">
-          <svg>
-            <use xlink:href="images/main-page_icons-sprite.svg#location"></use>
-          </svg>
-        </div>
-        <div class="slide__title">Транспортная доступность</div>
-        <div class="slide__link link">Смотреть квартиры объекта</div>
+      <div class="apartments-tile__icon">
+        <svg>
+          <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
+        </svg>
       </div>
-      <div class="slide">
-        <div class="slide__name">ЖК "Победы"</div>
-        <div class="slide__img"><img src="images/object_img1.jpg"/></div>
-        <div class="slide__icon">
-          <svg>
-            <use xlink:href="images/main-page_icons-sprite.svg#interest-points"></use>
-          </svg>
-        </div>
-        <div class="slide__title">Развитая ифраструктура </div>
-        <div class="slide__link link">Смотреть квартиры объекта</div>
+      <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+    </div>
+    <!--SLEDER TILE-->
+    <div class="apartments-tile">
+      <div class="apartments-tile__name">ЖК "Мирного"</div>
+      <div class="apartments-tile__img">
+        <!--TILE IMG--><img src="images/apartaments/apartaments2.jpg"/>
       </div>
-      <div class="slide">
-        <div class="slide__name">ЖК "Остров"</div>
-        <div class="slide__img"><img src="images/object_img1.jpg"/></div>
-        <div class="slide__icon">
-          <svg>
-            <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
-          </svg>
-        </div>
-        <div class="slide__title">Выразительная архитектура</div>
-        <div class="slide__link link">Смотреть квартиры объекта</div>
+      <div class="apartments-tile__icon">
+        <svg>
+          <use xlink:href="images/main-page_icons-sprite.svg#location"></use>
+        </svg>
       </div>
+      <div class="apartments-tile__title">Транспортная доступность</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+    </div>
+    <!--SLIDER TILE-->
+    <div class="apartments-tile">
+      <div class="apartments-tile__name">ЖК "Победы"</div>
+      <div class="apartments-tile__img">
+        <!--TILE IMG--><img src="images/apartaments/apartaments3.jpg"/>
+      </div>
+      <div class="apartments-tile__icon">
+        <svg>
+          <use xlink:href="images/main-page_icons-sprite.svg#interest-points"></use>
+        </svg>
+      </div>
+      <div class="apartments-tile__title">Развитая ифраструктура </div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+    </div>
+    <!--SLIDER TILE-->
+    <div class="apartments-tile">
+      <div class="apartments-tile__name">ЖК "Остров"</div>
+      <div class="apartments-tile__img">
+        <!--TILE IMG--><img src="images/apartaments/apartaments1.jpg"/>
+      </div>
+      <div class="apartments-tile__icon">
+        <svg>
+          <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
+        </svg>
+      </div>
+      <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
     </div>
   </div>
 </div>
