--- a/app/pug/layout/section-objects.pug
+++ b/app/pug/layout/section-objects.pug
@@ -23,7 +23,8 @@
                                 use(xlink:href="images/main-page_icons-sprite.svg#arrow")
                         p.arrow-btn__text Посмотреть все объекты
             .objects-tile__illustration
-                img.objects-tile__img(src="images/object_img1.jpg")
+                //IMAGE
+                img.objects-tile__img(src="images/objects/object_img1.jpg")
                 .objects-tile__icons
                     .objects-tile__icon
                         p.objects-tile__icon-text Детсад
@@ -43,8 +44,9 @@
             .objects-tile__info 
                 h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
                 h2.title Наши объекты
-                a.objects-tile__headline.link--active(href="#") ЖК "На Сенной"
-                p.objects-tile__text Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.
+                a.objects-tile__headline.link--active(href="#") ЖК "Остров"
+                p.objects-tile__text В центре города-курорта Миргород ведется строительство нового многоэтажного жилого дома по адресу ул. Гоголя, 77. Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города. На придомовой территории будут оборудованы детская площадка и автостоянка, произведено озеленение.
+
                 .objects-tile__links
                      a.arrow-btn.arrow-btn--left(href="#")
                         .arrow-btn__icon
@@ -57,12 +59,49 @@
                                 use(xlink:href="images/main-page_icons-sprite.svg#arrow")
                         p.arrow-btn__text Посмотреть все объекты
             .objects-tile__illustration
-                img.objects-tile__img(src="images/object_img1.jpg")
+                //IMAGE
+                img.objects-tile__img(src="images/objects/object_img2.jpg")
                 .objects-tile__icons
                     .objects-tile__icon
-                        p.objects-tile__icon-text Детсад
+                        p.objects-tile__icon-text Пляж
                         svg.objects-icon
-                            use(xlink:href="images/main-page_icons-sprite.svg#puzzle")       
+                            use(xlink:href="images/main-page_icons-sprite.svg#beach")       
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Магазин
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#marketplace")  
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Детский майданчик
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#playground")
+        //TILE END
+        //TILE STRAT
+        .objects-tile
+            .objects-tile__info 
+                h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
+                h2.title Наши объекты
+                a.objects-tile__headline.link--active(href="#") ЖК "Мирного"
+                p.objects-tile__text В центре города-курорта Миргород введен в эксплуатацию в мае 2017 года односекционного 10-этажного жилого по адресу ул. Панаса Мирного, 3. Расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города. На придомовой территории оборудованы детская площадка и автостоянка, произведено озеленение.
+
+                .objects-tile__links
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть квартиры объекта
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть все объекты
+            .objects-tile__illustration
+                //IMAGE
+                img.objects-tile__img(src="images/objects/object_img3.jpg")
+                .objects-tile__icons
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Рынок
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#market")       
                     .objects-tile__icon
                         p.objects-tile__icon-text Школа
                         svg.objects-icon
@@ -71,6 +110,41 @@
                         p.objects-tile__icon-text Парк
                         svg.objects-icon
                             use(xlink:href="images/main-page_icons-sprite.svg#park")
+        //TILE END
+        //TILE STRAT
+        .objects-tile
+            .objects-tile__info 
+                h3.headline ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ
+                h2.title Наши объекты
+                a.objects-tile__headline.link--active(href="#") ЖК "Победы"
+                p.objects-tile__text Построен и введен в эксплуатацию новый 108-квартирный девятиэтажный кирпичный дом по адресу ул. Победы, 10 <br> Дом имеет очень удачное расположение:<br>— центр города;<br>— непосредственная близость школы, детского сада, магазина «Фуршет»;<br>— возле дома будут обустроены автостоянки, детские площадки;<br>— 10 минут спокойной ходьбы до курорта Миргород...
+                .objects-tile__links
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть квартиры объекта
+                     a.arrow-btn.arrow-btn--left(href="#")
+                        .arrow-btn__icon
+                            svg.icon
+                                use(xlink:href="images/main-page_icons-sprite.svg#arrow")
+                        p.arrow-btn__text Посмотреть все объекты
+            .objects-tile__illustration
+                //IMAGE
+                img.objects-tile__img(src="images/objects/object_img4.jpg")
+                .objects-tile__icons
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Курорт
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#resort")       
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Рынок
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#market")  
+                    .objects-tile__icon
+                        p.objects-tile__icon-text Детская площадка
+                        svg.objects-icon
+                            use(xlink:href="images/main-page_icons-sprite.svg#playground")
         //TILE END
         
                             
