--- a/app/layout/footer.html
+++ b/app/layout/footer.html
@@ -1,56 +1,54 @@
 
 <div class="container">
-  <div class="footer-content grid">
-    <div class="address">
-      <h5>Наши офисы</h5><a class="link link--footer" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="link link--footer" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="link link--footer" href="#">Время работы: 9:00 – 18:00</a>
+  <div class="grid">
+    <div class="footer-address">
+      <h5>Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
     </div>
-    <div class="link-logo"><a class="link" href="#"> 
+    <div class="footer-logo"><a class="link" href="#"> 
         <svg> 
           <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
         </svg></a></div>
-    <div class="contacts">
-      <h5>Наши офисы</h5><a class="link link--footer" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="link link--footer" href="tel=+380509915883">+38(050) 991-58-83</a><a class="link link--footer" href="tel=+380509915883">+38(050) 991-58-82</a>
+    <div class="footer-contacts">
+      <h5>Наши офисы</h5><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a>
     </div>
-    <div class="newsletter">
-      <form action=""></form>
-      <fieldset>
-        <legend>Будьте в курсе спецпредложений </legend>
-      </fieldset>
-      <div class="text-wrap">
-        <label for="newsletter">Ваш e-mail
-          <input id="newsletter" type="text"/>
+    <div class="footer-newsletter">
+      <form class="newsletter-form" action=""></form>
+      <h5 class="newsletter-form__headline">Будьте в курсе спецпредложений </h5>
+      <div class="newsletter-form__text">
+        <label class="newsletter-form__title" for="newsletter">Ваш e-mail
+          <input class="newsletter-form__field" id="newsletter" type="text"/>
         </label>
-        <button class="submit">Хочу быть в курсе!</button>
+        <button class="btn newsletter-form__btn">Хочу быть в курсе!</button>
       </div>
-    </div><a class="link sm-button" href="#header">
-      <div class="svg-wrap">
-        <svg>
+    </div><a class="arrow-btn footer-btn" href="#about">
+      <div class="arrow-btn__icon">
+        <svg class="icon">
           <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
         </svg>
       </div>
-      <p>Вверх</p></a>
-    <div class="backcall">
-      <p>Мы предоставляем бесплатные консультации!</p><a class="submit">Закажите звонок!</a>
+      <p class="arrow-btn__text">Вверх</p></a>
+    <div class="footer-backcall">
+      <p>Мы предоставляем бесплатные консультации!</p><a class="btn">Закажите звонок!</a>
     </div>
-    <div class="social">
-      <h6>МЫ В СОЦСЕТЯХ</h6>
-      <div class="icon-wrap"><a class="link" href="#header">
+    <div class="footer-social">
+      <h6 class="footer-social__title">МЫ В СОЦСЕТЯХ</h6>
+      <div class="footer-social__icons"><a class="footer-social__link" href="#header">
           <div class="svg-wrap">
             <svg>
               <use xlink:href="images/main-page_icons-sprite.svg#facebook icon"></use>
             </svg>
-          </div></a><a class="link" href="#header">
+          </div></a><a class="footer-social__link" href="#header">
           <div class="svg-wrap">
             <svg>
               <use xlink:href="images/main-page_icons-sprite.svg#telegram"></use>
             </svg>
-          </div></a><a class="link" href="#header">
+          </div></a><a class="footer-social__link" href="#header">
           <div class="svg-wrap">
             <svg>
               <use xlink:href="images/main-page_icons-sprite.svg#insta icon"></use>
             </svg>
           </div></a></div>
     </div>
-    <p class="copyright">© 2020. www.angro.com.ua</p>
+    <p class="footer-copyright">© 2020. www.angro.com.ua</p>
   </div>
 </div>
