--- a/app/layout/section-objects.html
+++ b/app/layout/section-objects.html
@@ -26,7 +26,8 @@
             </div>
             <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
       </div>
-      <div class="objects-tile__illustration"><img class="objects-tile__img" src="images/object_img1.jpg"/>
+      <div class="objects-tile__illustration">
+        <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img1.jpg"/>
         <div class="objects-tile__icons">
           <div class="objects-tile__icon">
             <p class="objects-tile__icon-text">Детсад</p>
@@ -54,8 +55,8 @@
     <div class="objects-tile">
       <div class="objects-tile__info"> 
         <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-        <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "На Сенной"</a>
-        <p class="objects-tile__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
+        <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Остров"</a>
+        <p class="objects-tile__text">В центре города-курорта Миргород ведется строительство нового многоэтажного жилого дома по адресу ул. Гоголя, 77. Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города. На придомовой территории будут оборудованы детская площадка и автостоянка, произведено озеленение.</p>
         <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
             <div class="arrow-btn__icon">
               <svg class="icon">
@@ -70,12 +71,58 @@
             </div>
             <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
       </div>
-      <div class="objects-tile__illustration"><img class="objects-tile__img" src="images/object_img1.jpg"/>
+      <div class="objects-tile__illustration">
+        <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img2.jpg"/>
         <div class="objects-tile__icons">
           <div class="objects-tile__icon">
-            <p class="objects-tile__icon-text">Детсад</p>
+            <p class="objects-tile__icon-text">Пляж</p>
             <svg class="objects-icon">
-              <use xlink:href="images/main-page_icons-sprite.svg#puzzle">      </use>
+              <use xlink:href="images/main-page_icons-sprite.svg#beach">      </use>
+            </svg>
+          </div>
+          <div class="objects-tile__icon">
+            <p class="objects-tile__icon-text">Магазин</p>
+            <svg class="objects-icon">
+              <use xlink:href="images/main-page_icons-sprite.svg#marketplace"> </use>
+            </svg>
+          </div>
+          <div class="objects-tile__icon">
+            <p class="objects-tile__icon-text">Детский майданчик</p>
+            <svg class="objects-icon">
+              <use xlink:href="images/main-page_icons-sprite.svg#playground"></use>
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--TILE END-->
+    <!--TILE STRAT-->
+    <div class="objects-tile">
+      <div class="objects-tile__info"> 
+        <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+        <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Мирного"</a>
+        <p class="objects-tile__text">В центре города-курорта Миргород введен в эксплуатацию в мае 2017 года односекционного 10-этажного жилого по адресу ул. Панаса Мирного, 3. Расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города. На придомовой территории оборудованы детская площадка и автостоянка, произведено озеленение.</p>
+        <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
+            <div class="arrow-btn__icon">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+              </svg>
+            </div>
+            <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
+            <div class="arrow-btn__icon">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+              </svg>
+            </div>
+            <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
+      </div>
+      <div class="objects-tile__illustration">
+        <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img3.jpg"/>
+        <div class="objects-tile__icons">
+          <div class="objects-tile__icon">
+            <p class="objects-tile__icon-text">Рынок</p>
+            <svg class="objects-icon">
+              <use xlink:href="images/main-page_icons-sprite.svg#market">      </use>
             </svg>
           </div>
           <div class="objects-tile__icon">
@@ -88,6 +135,51 @@
             <p class="objects-tile__icon-text">Парк</p>
             <svg class="objects-icon">
               <use xlink:href="images/main-page_icons-sprite.svg#park"></use>
+            </svg>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--TILE END-->
+    <!--TILE STRAT-->
+    <div class="objects-tile">
+      <div class="objects-tile__info"> 
+        <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+        <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Победы"</a>
+        <p class="objects-tile__text">Построен и введен в эксплуатацию новый 108-квартирный девятиэтажный кирпичный дом по адресу ул. Победы, 10 <br> Дом имеет очень удачное расположение:<br>— центр города;<br>— непосредственная близость школы, детского сада, магазина «Фуршет»;<br>— возле дома будут обустроены автостоянки, детские площадки;<br>— 10 минут спокойной ходьбы до курорта Миргород...</p>
+        <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
+            <div class="arrow-btn__icon">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+              </svg>
+            </div>
+            <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
+            <div class="arrow-btn__icon">
+              <svg class="icon">
+                <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+              </svg>
+            </div>
+            <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
+      </div>
+      <div class="objects-tile__illustration">
+        <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img4.jpg"/>
+        <div class="objects-tile__icons">
+          <div class="objects-tile__icon">
+            <p class="objects-tile__icon-text">Курорт</p>
+            <svg class="objects-icon">
+              <use xlink:href="images/main-page_icons-sprite.svg#resort">      </use>
+            </svg>
+          </div>
+          <div class="objects-tile__icon">
+            <p class="objects-tile__icon-text">Рынок</p>
+            <svg class="objects-icon">
+              <use xlink:href="images/main-page_icons-sprite.svg#market"> </use>
+            </svg>
+          </div>
+          <div class="objects-tile__icon">
+            <p class="objects-tile__icon-text">Детская площадка</p>
+            <svg class="objects-icon">
+              <use xlink:href="images/main-page_icons-sprite.svg#playground"></use>
             </svg>
           </div>
         </div>
