--- a/app/pug/layout/section-contact.pug
+++ b/app/pug/layout/section-contact.pug
@@ -1,17 +1,15 @@
 .container
-    .form-wrap
-        form(action="").grid
-            fieldset
-                legend С удовольствием проконсультируем Вас!
-            label( for="username") Ваше имя
-                input#username(type="text" required )
-            label( for="tel" ) Телефон
-                input#tel(type="tel" required )
-            label( for="email") EMAIL (НЕ ОБЯЗАТЕЛЬНО)
-                input#email(type="email")
-            .checkbox-wrap
-                input#check(type="checkbox")
-                .text-wrap
-                    label( for="check") Я даю согласие на обработку моих персональных данных согласно 
-                    a(href="#").link политике конфиденциальности 
-            button.submit Отправить запрос
+        form(action="").grid.contact-form
+            h4.contact-form__headline С удовольствием проконсультируем Вас!
+            label( for="username").contact-form__title Ваше имя
+                input#username(type="text" required).contact-form__field
+            label( for="tel" ).contact-form__title Телефон
+                input#tel(type="tel" required ).contact-form__field
+            label( for="email").contact-form__title EMAIL (НЕ ОБЯЗАТЕЛЬНО)
+                input#email(type="email").contact-form__field
+            .contact-form__checkbox
+                input#check(type="checkbox").contact-form__field
+                .contact-form__text
+                    label( for="check").contact-form__title Я даю согласие на обработку моих персональных данных согласно 
+                    a(href="#").link.contact-form__link политике конфиденциальности 
+            button(type="submit").btn.contact-form__btn Отправить запрос
