--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -1,23 +1,92 @@
 .apartments {
-    &-slider {}
-    &-content {}
+    position: relative;
+    height: 1150px;
+    .container {
+        height: 100%;
+        position: relative;
+    }
     .headline {
         line-height: 37px;
     }
-    .head-wrap {
+    &-head {
         grid-column: 1/7;
     }
-    .sm-button {
-        grid-column: 1/7;
-        grid-row: 2/3;
-        align-self: flex-end;
+    .arrow-btn {
+        // grid-column: 1/7;
+        // grid-row: 2/3;
+        // align-self: flex-end;
+        @include pos($b: 50px, $l: 0);
     }
-    .slide {
+    &-slider {
         display: flex;
         justify-content: space-between;
     }
+    &-slider {
+        &__nextbtn {
+            @include pos($r: 50px, $t: 50%);
+            z-index: 2;
+            fill: #FFF3A6;
+            transform: translateX(50%) rotate(180deg);
+        }
+        &__prevbtn {
+            @include pos($r: 51%, $t: 50%);
+            z-index: 2;
+            fill: #FFF3A6;
+        }
+        &__wrap {
+            @include pos($t: 100px, $l: 50%);
+            width: 50vw;
+        }
+    }
+    &-tile {
+        height: 920px;
+        width: 200px;
+        margin: 0 .25rem;
+        background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%), linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%), $page-darken-bg;
+        text-align: center;
+        color: $tw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        &__name {
+            padding: 25px 0;
+            //font-size: 24px;
+            font-size: 36px;
+            line-height: 44px;
+        }
+        &__img {
+            width: 100%;
+            height: 370px;
+            overflow: hidden;
+            img {
+                height: 120%;
+                object-fit: cover;
+            }
+        }
+        &__icon {
+            margin: 50px 0;
+            svg {
+                @include size(85px);
+            }
+        }
+        &__title {
+            margin-bottom: 75px;
+            font-size: 36px;
+            line-height: 44px;
+            text-align: center;
+        }
+        &__link {
+            margin-bottom: 50px;
+            text-transform: uppercase;
+            font-size: 24px;
+            line-height: 29px;
+            text-align: center;
+        }
+    }
+    //SLIDER BUTTON
     .slick-arrow.slick-prev {
-        display: none !important;
+        // display: none !important;
     }
     .slick-next {
         top: calc( 50% - 52.5px);
@@ -27,55 +96,12 @@
     .slick-arrow {
         @include size(65px, 105px);
         font-size: 50px;
-        background: url(/images/icons/arrow.svg) 60% no-repeat;
+        //background: url(/images/icons/arrow.svg) 60% no-repeat;
         cursor: pointer;
         &:before {
             content: '';
             @include size(45px, 85px);
             font-size: 50px;
-        }
-    }
-    &-slider {
-        grid-column: 7/13;
-        grid-row: 1/3;
-        .slick-list {
-            height: 100%;
-        }
-        .slick-track {
-            height: 100%;
-        }
-        .slide {
-            height: 100%;
-            margin: 0 .25rem;
-            background: linear-gradient(270deg, rgba(66, 60, 58, 0.33) -20.49%, #423C3A -20.49%, rgba(255, 255, 255, 0) 18.52%), linear-gradient(90deg, rgba(66, 60, 58, 0.33) -12.06%, rgba(255, 255, 255, 0) 25.73%), $page-darken-bg;
-            text-align: center;
-            color: $tw;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            &__name {
-                padding: 25px 0;
-                font-size: 24px;
-            }
-            &__img {
-                img {
-                    width: 100%;
-                    object-fit: contain;
-                }
-            }
-            &__icon {
-                margin: 50px 0;
-                svg {
-                    @include size(70px);
-                }
-            }
-            &__title {
-                margin-bottom: 75px;
-            }
-            &__link {
-                margin-bottom: 50px;
-            }
         }
     }
 }
