--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -3,87 +3,76 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: $tw;
-    form {
-        fieldset {
-            font-style: normal;
-            font-weight: normal;
-            font-size: 36px;
-            line-height: 44px;
-            grid-column: 1 / 13;
-            grid-row: 1 / 2;
-            text-transform: uppercase;
-            text-align: center;
-            margin-bottom: 80px;
-        }
-        label {
-            display: flex;
-            flex-direction: column;
-            text-transform: uppercase;
-            font-size: 1.25rem;
-            input {
-                margin: 1rem 0 0 0;
-                font-size: 1rem;
-                line-height: 1.2rem;
-                background: transparent;
-                border-bottom: 2px solid #ffffff;
-                padding: .1rem .5rem;
-                color: #ffffff;
-            }
-        }
-        label:nth-child(2) {
+}
+
+.contact-form {
+    &__headline {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 44px;
+        grid-column: 1 / 13;
+        grid-row: 1 / 2;
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 80px;
+    }
+    &__title {
+        display: flex;
+        flex-direction: column;
+        text-transform: uppercase;
+        font-size: 1.25rem;
+        &:nth-child(2) {
             grid-column: 1 / 5;
             grid-row: 2 / 3;
         }
-        label:nth-child(3) {
+        &:nth-child(3) {
             grid-column: 5 / 9;
             grid-row: 2 / 3;
         }
-        label:nth-child(4) {
+        &:nth-child(4) {
             grid-column: 9 / 13;
             grid-row: 2 / 3;
         }
-        .checkbox-wrap {
-            grid-column: 2 / 7;
-            grid-row: 3 / 4;
-            display: flex;
-            align-items: center;
-            line-height: 1.2rem;
-            text-transform: uppercase;
-            margin-top: 100px;
-            input {
-                margin: 0 20px 0 0;
-            }
-            .text-wrap {
-                text-align: center;
-            }
-            label {
-                display: inline-block;
-                font-size: 1rem;
-            }
-            a {
-                display: inline-block;
-                //text-decoration: underline;
-                color: #FFF3A6;
-                border-bottom: 1px solid #FFF3A6;
-                padding: 0 0 .1rem 0;
-                cursor: pointer;
-                &:hover {
-                    color: #FFFFFF;
-                    border-bottom: 1px solid #FFFFFF;
-                }
-            }
-        }
-        button {
-            grid-column: 9 / 12;
-            grid-row: 3 / 4;
-            height: 4rem;
-            align-self: flex-end;
-        }
-        // .submit {
-        //     font-size: 1.25rem;
-        //     color: #828282;
-        //     background: #FFF3A6;
-        //     font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-        // }
     }
+    &__field {
+        margin: 1rem 0 0 0;
+        font-size: 1rem;
+        line-height: 1.2rem;
+        background: transparent;
+        border-bottom: 2px solid #ffffff;
+        padding: .1rem .5rem;
+        color: #ffffff;
+    }
+    &__checkbox {
+        grid-column: 2 / 7;
+        grid-row: 3 / 4;
+        display: flex;
+        align-items: center;
+        line-height: 1.2rem;
+        text-transform: uppercase;
+        margin-top: 100px;
+        input {
+            margin: 0 20px 0 0;
+        }
+        label {
+            display: inline-block;
+            font-size: 1rem;
+        }
+    }
+    &__text {
+        text-align: center;
+    }
+    &__btn {
+        grid-column: 9 / 12;
+        grid-row: 3 / 4;
+        height: 4rem;
+        align-self: flex-end;
+    }
+    // .submit {
+    //     font-size: 1.25rem;
+    //     color: #828282;
+    //     background: #FFF3A6;
+    //     font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+    // }
 }
