--- a/app/scss/modules/_section-objects.scss
+++ b/app/scss/modules/_section-objects.scss
@@ -40,7 +40,7 @@
     &-tile__links {
         //font-size: 1rem;
         .arrow-btn:first-child {
-            margin: 0 0 50px 0;
+            margin: 0 0 30px 0;
         }
     }
     &-tile__illustration {
@@ -63,9 +63,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: space-around;
         font-size: 19px;
         padding: 1rem;
         width: 33%;
+        text-align: center;
         svg {
             @include size(95px);
             fill: transparent;
