fix sidebar, info-popup;

--- a/app/layout/sidebar.html
+++ b/app/layout/sidebar.html
@@ -7,7 +7,7 @@
       </svg></a>
     <!-- LOGO END -->
     <!-- LANG SELECT START-->
-    <div class="sidebar-lang"><a class="link active" href="#">UA</a><a class="link" href="#">RU</a></div>
+    <div class="sidebar-lang"><a class="sidebar-lang__link link--active" href="#">UA</a><a class="sidebar-lang__link" href="#">RU</a></div>
     <!-- LANG SELECT END-->
     <div class="sidebar-menu">
       <div class="sidebar-menu__triger">Меню</div>
