--- a/app/pug/layout/info.pug
+++ b/app/pug/layout/info.pug
@@ -4,10 +4,10 @@
         data-aos-easing="linear" 
         data-aos-duration="400"
         data-aos-anchor-placement="bottom")
-    .link
-        a(href="tel:+380506347178").top +38(050) 634 71 78
-        p.bottom.active Заказать звонок
-    a.link
-        svg.top
+    .info-block.info-left
+        a(href="tel:+380506347178").info-text +38(050) 634 71 78
+        p.info-link.link--active Заказать звонок
+    a.info-block.info-right
+        svg.info-icon
             use(xlink:href="images/main-page_icons-sprite.svg#apartament")
-        p.bottom Выбрать<br>квартиру
+        p.info-link Выбрать<br>квартиру
