--- a/app/pug/layout/section-apartments.pug
+++ b/app/pug/layout/section-apartments.pug
@@ -24,7 +24,7 @@ svg.apartments-slider__nextbtn
                 //TILE IMG
                 img(src="images/apartaments/apartaments1.jpg")
             .apartments-tile__icon
-                svg
+                svg.apartments-tile__svg
                     use(xlink:href="images/main-page_icons-sprite.svg#tover")
             .apartments-tile__title Выразительная архитектура
             a(href="").apartments-tile__link.link Смотреть квартиры объекта
@@ -35,7 +35,7 @@ svg.apartments-slider__nextbtn
                 //TILE IMG
                 img(src="images/apartaments/apartaments2.jpg")
             .apartments-tile__icon
-                svg
+                svg.apartments-tile__svg
                     use(xlink:href="images/main-page_icons-sprite.svg#location")
             .apartments-tile__title Транспортная доступность
             a(href="").apartments-tile__link.link Смотреть квартиры объекта
@@ -46,19 +46,19 @@ svg.apartments-slider__nextbtn
                 //TILE IMG
                 img(src="images/apartaments/apartaments3.jpg")
             .apartments-tile__icon
-                svg
+                svg.apartments-tile__svg
                     use(xlink:href="images/main-page_icons-sprite.svg#interest-points")
             .apartments-tile__title Развитая ифраструктура 
             a(href="").apartments-tile__link.link Смотреть квартиры объекта
         //SLIDER TILE
         .apartments-tile
-            .apartments-tile__name ЖК "Остров"
+            .apartments-tile__name ЖК "На сенной"
             .apartments-tile__img
                 //TILE IMG
                 img(src="images/apartaments/apartaments1.jpg")
             .apartments-tile__icon
-                svg
-                    use(xlink:href="images/main-page_icons-sprite.svg#tover")
-            .apartments-tile__title Выразительная архитектура
+                svg.apartments-tile__svg
+                    use(xlink:href="images/main-page_icons-sprite.svg#layout")
+            .apartments-tile__title Множество планировок
             a(href="").apartments-tile__link.link Смотреть квартиры объекта
         
