--- a/app/pug/layout/sidebar.pug
+++ b/app/pug/layout/sidebar.pug
@@ -8,9 +8,8 @@
         // LOGO END 
         // LANG SELECT START
         .sidebar-lang
-            a.link.active(href="#") UA
-            
-            a.link(href="#") RU
+            a.sidebar-lang__link.link--active(href="#") UA
+            a.sidebar-lang__link(href="#") RU
         // LANG SELECT END
         .sidebar-menu
             .sidebar-menu__triger Меню
