--- a/app/layout/section-apartments.html
+++ b/app/layout/section-apartments.html
@@ -31,7 +31,7 @@
         <!--TILE IMG--><img src="images/apartaments/apartaments1.jpg"/>
       </div>
       <div class="apartments-tile__icon">
-        <svg>
+        <svg class="apartments-tile__svg">
           <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
         </svg>
       </div>
@@ -44,7 +44,7 @@
         <!--TILE IMG--><img src="images/apartaments/apartaments2.jpg"/>
       </div>
       <div class="apartments-tile__icon">
-        <svg>
+        <svg class="apartments-tile__svg">
           <use xlink:href="images/main-page_icons-sprite.svg#location"></use>
         </svg>
       </div>
@@ -57,7 +57,7 @@
         <!--TILE IMG--><img src="images/apartaments/apartaments3.jpg"/>
       </div>
       <div class="apartments-tile__icon">
-        <svg>
+        <svg class="apartments-tile__svg">
           <use xlink:href="images/main-page_icons-sprite.svg#interest-points"></use>
         </svg>
       </div>
@@ -65,16 +65,16 @@
     </div>
     <!--SLIDER TILE-->
     <div class="apartments-tile">
-      <div class="apartments-tile__name">ЖК "Остров"</div>
+      <div class="apartments-tile__name">ЖК "На сенной"</div>
       <div class="apartments-tile__img">
         <!--TILE IMG--><img src="images/apartaments/apartaments1.jpg"/>
       </div>
       <div class="apartments-tile__icon">
-        <svg>
-          <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
+        <svg class="apartments-tile__svg">
+          <use xlink:href="images/main-page_icons-sprite.svg#layout"></use>
         </svg>
       </div>
-      <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+      <div class="apartments-tile__title">Множество планировок</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
     </div>
   </div>
 </div>
