--- a/app/scss/modules/_section-apartments.scss
+++ b/app/scss/modules/_section-apartments.scss
@@ -75,16 +75,18 @@
         }
         &__title {
             margin-bottom: 75px;
-            font-size: 36px;
+            font-size: 33px;
             line-height: 44px;
             text-align: center;
+            padding: 0 .25rem;
         }
         &__link {
             margin-bottom: 50px;
             text-transform: uppercase;
-            font-size: 24px;
+            font-size: 22px;
             line-height: 29px;
             text-align: center;
+            padding: 0 .25rem;
         }
     }
     //SLIDER BUTTON
